Started firmware implementation for UART functionalities
1. Fixed bugs in web app
-  color computation based on RGB sliders.

2. Updated status parameter in GET/SET STATUS to int instead of string
-  Makes it efficient for firmware to process

3. Updated values for GET/SET UART PROPERTIES

4. Added parameter checking in SET APIs

5. Improve Python/NodeJS device simulators for UART functionalities

6. [FIRMWARE] Implement FT900 UART functionalities
   a. [OK] UART MQTT messaging and dynamic configuration
      1. DISABLE UART - call uart_close() and uart_soft_reset()
      2. ENABLE UART - call uart_open()
      3. GET PROPERTIES - get structure data with correct value mapping (due to unexposed values)
      4. SET PROPERTIES - set structure data with correct value mapping
         and call uart_close(), uart_soft_reset(), uart_open()
         * uart_soft_reset needs to be called to prevent distorted data when changing databits or parity

--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -6,18 +6,18 @@
     <button class="button button-positive icon ion-refresh" ng-click="getStatus()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <button id="configureDevice-button43" ng-click="getDevice()" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.devicename }}</button>
-    <div id="configureDevice-markdown30" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
+    <button id="configureDevice-button43" ng-click="getDevice(data.devicename)" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.devicename }}</button>
+    <div id="configureDevice-markdown30" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">UUID: {{ data.deviceid }}</p>
     </div>
-    <div id="configureDevice-markdown69" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
+    <div id="configureDevice-markdown69" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">Serial Number: {{ data.serialnumber }}</p>
     </div>
-    <div id="configureDevice-markdown39" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
+    <div id="configureDevice-markdown39" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">Firmware Version: {{ data.deviceversion }}</p>
     </div>
-    <div id="configureDevice-markdown16" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:12px;">{{ data.devicestatus }}</p>
+    <div id="configureDevice-markdown16" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#444444;font-size:12px;">Status: {{ data.status }}</p>
     </div>
     <div class="spacer" style="height: 20px;"></div>
     <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">UART</button>
