--- a/webapp/src/ionicapp/www/templates/light.html
+++ b/webapp/src/ionicapp/www/templates/light.html
@@ -27,13 +27,13 @@
       <div id="light-markdown126" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Color</p>
       </div>
-      <ion-item class="range range-assertive" id="light-range9">Red
+      <ion-item class="range range-assertive assertive" id="light-range9">Red
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.colorRED" ng-change="computeHexCode()">
       </ion-item>
-      <ion-item class="range range-balanced" id="light-range10">Green
+      <ion-item class="range range-balanced balanced" id="light-range10">Green
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.colorGREEN" ng-change="computeHexCode()">
       </ion-item>
-      <ion-item class="range range-positive" id="light-range11">Blue
+      <ion-item class="range range-positive positive" id="light-range11">Blue
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.colorBLUE" ng-change="computeHexCode()">
       </ion-item>
       <label class="item item-input" id="light-input95">
