--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -146,3 +146,9 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	color: black;
 }
 
+.slider-red {
+	color: red;
+	//background: red;
+	background-color: red;
+}
+
