Fixed bugs in uart notification page

--- a/webapp/src/ionicapp/www/templates/deviceNotifications.html
+++ b/webapp/src/ionicapp/www/templates/deviceNotifications.html
@@ -11,7 +11,7 @@
     </div>
     <form id="deviceNotifications-form14" class="list">
       <div id="deviceNotifications-markdown27" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:12px;">{{ data.devicestatus }}</p>
+        <p style="color:#444444;font-size:12px;">{{ data.status }}</p>
       </div>
       <div id="deviceNotifications-button-bar1" class="button-bar">
         <button id="deviceNotifications-button48" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">Email</button>
