--- a/webapp/src/ionicapp/www/templates/potentiometer.html
+++ b/webapp/src/ionicapp/www/templates/potentiometer.html
@@ -23,19 +23,28 @@
         <select ng-model="data.attributes.mode" ng-options="mode.id as mode.label for mode in modes"></select>
       </label>
     </form>
-    <div id="potentiometer-markdown115" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Threshold</p>
-    </div>
     <form id="potentiometer-form73" class="list" ng-show="data.attributes.mode==0">
+      <div id="potentiometer-markdown115" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Threshold</p>
+      </div>
       <label class="item item-input" id="potentiometer-input103">
+        <span class="input-label">Value</span>
+        <input type="text" placeholder="" ng-model="data.attributes.threshold.value">
+      </label>
+    </form>
+    <form id="potentiometer-form106" class="list" ng-show="data.attributes.mode==1">
+      <div id="potentiometer-markdown128" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Threshold</p>
+      </div>
+      <label class="item item-input" id="potentiometer-input97">
         <span class="input-label">Minimum Limit</span>
         <input type="text" placeholder="" ng-model="data.attributes.threshold.min">
       </label>
-      <label class="item item-input" id="potentiometer-input105">
+      <label class="item item-input" id="potentiometer-input98">
         <span class="input-label">Maximum Limit</span>
         <input type="text" placeholder="" ng-model="data.attributes.threshold.max">
       </label>
-      <label class="item item-select" id="potentiometer-select29">
+      <label class="item item-select" id="potentiometer-select43">
         <span class="input-label">Activate when</span>
         <select ng-model="data.attributes.threshold.activate" ng-options="activate.id as activate.label for activate in activates"></select>
       </label>
@@ -53,13 +62,22 @@
         <input type="text" placeholder="" ng-model="data.attributes.alert.period">
       </label>
     </form>
-    <form id="potentiometer-form78" class="list">
+    <form id="potentiometer-form108" class="list" ng-show="data.attributes.mode==2">
+      <div id="potentiometer-markdown130" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Hardware</p>
+      </div>
+      <label class="item item-select" id="potentiometer-select45">
+        <span class="input-label">IoT Modem</span>
+        <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
+      </label>
+    </form>
+    <form id="potentiometer-form78" class="list" ng-show="data.attributes.mode!=2">
       <div id="potentiometer-markdown116" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Notification settings</p>
       </div>
       <ion-toggle toggle-class="toggle-positive" id="potentiometer-toggle13" ng-change="changeNotification(data.showNotification)" ng-model="data.showNotification">Show</ion-toggle>
     </form>
-    <form id="potentiometer-form79" class="list" ng-show="data.showNotification==1">
+    <form id="potentiometer-form79" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="potentiometer-markdown107" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Messages</p>
       </div>
@@ -70,7 +88,7 @@
       <label class="item item-input" id="potentiometer-textarea11">
         <span class="input-label"></span><textarea placeholder="" ng-model="data.attributes.notification.messages[1].message"></textarea></label>
     </form>
-    <form id="potentiometer-form80" class="list" ng-show="data.showNotification==1">
+    <form id="potentiometer-form80" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="potentiometer-markdown108" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Recipients</p>
       </div>
@@ -87,8 +105,9 @@
         <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
       </label>
       <ion-checkbox id="potentiometer-checkbox17" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
-      <label class="item item-input" id="potentiometer-input114">
-        <input type="text" placeholder="Device(s)" ng-model="data.attributes.notification.endpoints.modem.recipients">
+      <label class="item item-select" id="potentiometer-select42">
+        <span class="input-label"></span>
+        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename"></select>
       </label>
     </form>
     <form id="potentiometer-form91" class="list">
