--- a/webapp/src/ionicapp/www/templates/speaker.html
+++ b/webapp/src/ionicapp/www/templates/speaker.html
@@ -46,7 +46,7 @@
       </label>
       <label class="item item-input" id="speaker-input93">
         <span class="input-label">Pitch (note) </span>
-        <input type="number" placeholder="possible values: 55-126" ng-model="data.attributes.midi.pitch">
+        <input type="number" placeholder="values: 55-126" ng-model="data.attributes.midi.pitch">
       </label>
       <label class="item item-input" id="speaker-input94">
         <span class="input-label">Delay (milliseconds)</span>
