--- a/webapp/src/ionicapp/www/templates/deviceI2C.html
+++ b/webapp/src/ionicapp/www/templates/deviceI2C.html
@@ -37,6 +37,9 @@
         <div id="deviceI2C-markdown68" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.model }}</p>
         </div>
+        <div id="deviceI2C-markdown127" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled }}</p>
+        </div>
       </div>
     </ion-list>
     <button id="deviceI2C-button23" ng-click="addI2CDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
