--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -14,7 +14,7 @@
     </div>
     <button id="viewI2CDevice-button97" ng-click="processI2CSensor()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }} - I2C {{ data.sensor.number }}</button>
     <form id="viewI2CDevice-form31" class="list">
-      <div class="spacer" style="width: 480px; height: 20px;"></div>
+      <div class="spacer" style="width: 480px; height: 10px;"></div>
       <div id="viewI2CDevice-markdown89" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Manufacturer</p>
       </div>
@@ -39,6 +39,9 @@
       <div id="viewI2CDevice-markdown122" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
+    </form>
+    <form id="viewI2CDevice-form105" class="list">
+      <ion-toggle toggle-class="toggle-positive" id="viewI2CDevice-toggle7" ng-model="data.enable" ng-change="changeI2CDevice(data.enable)">Enable</ion-toggle>
     </form>
   </ion-content>
 </ion-view>
