--- a/webapp/src/ionicapp/www/templates/speaker.html
+++ b/webapp/src/ionicapp/www/templates/speaker.html
@@ -20,7 +20,7 @@
       </div>
       <label class="item item-select" id="speaker-select32">
         <span class="input-label"></span>
-        <select ng-model="data.attributes.endpoint" ng-options="endpoint.id as endpoint.label for endpoint in endpoints"></select>
+        <select ng-model="data.attributes.endpoint" ng-options="endpoint.id as endpoint.label for endpoint in endpoints" ng-change="changeEndpoint()"></select>
       </label>
     </form>
     <form id="speaker-form74" class="list" ng-show="data.attributes.endpoint==1">
@@ -42,15 +42,15 @@
       </div>
       <label class="item item-input" id="speaker-input92">
         <span class="input-label">Duration (milliseconds)</span>
-        <input type="number" placeholder="" ng-model="data.attributes.midi.duration">
+        <input type="number" placeholder="" ng-model="data.attributes.values.duration">
       </label>
       <label class="item item-input" id="speaker-input101">
         <span class="input-label">Pitch (note)</span>
-        <input type="number" placeholder="55-126" ng-model="data.attributes.midi.pitch">
+        <input type="number" placeholder="55-126" ng-model="data.attributes.values.pitch">
       </label>
       <label class="item item-input" id="speaker-input94">
         <span class="input-label">Delay (milliseconds)</span>
-        <input type="number" placeholder="" ng-model="data.attributes.midi.delay">
+        <input type="number" placeholder="" ng-model="data.attributes.values.delay">
       </label>
     </form>
     <form id="speaker-form107" class="list" ng-show="data.attributes.endpoint==1">
@@ -59,11 +59,11 @@
       </div>
       <label class="item item-input" id="speaker-input99">
         <span class="input-label">Duration (milliseconds)</span>
-        <input type="number" placeholder="" ng-model="data.attributes.midi.duration">
+        <input type="number" placeholder="" ng-model="data.attributes.values.duration">
       </label>
       <label class="item item-input" id="speaker-input100">
         <span class="input-label">Delay (milliseconds)</span>
-        <input type="number" placeholder="" ng-model="data.attributes.midi.delay">
+        <input type="number" placeholder="" ng-model="data.attributes.values.delay">
       </label>
     </form>
     <form id="speaker-form75" class="list">
