--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -20,7 +20,7 @@
       </div>
       <label class="item item-select" id="temperature-select37">
         <span class="input-label"></span>
-        <select ng-model="data.attributes.mode" ng-options="mode.id as mode.label for mode in modes"></select>
+        <select ng-model="data.attributes.mode" ng-options="mode.id as mode.label for mode in modes" ng-change="changeMode()"></select>
       </label>
     </form>
     <form id="temperature-form109" class="list" ng-show="data.attributes.mode==0">
@@ -29,7 +29,7 @@
       </div>
       <label class="item item-input" id="temperature-input102">
         <span class="input-label">Value</span>
-        <input type="text" placeholder="" ng-model="data.attributes.threshold.min">
+        <input type="number" placeholder="" ng-model="data.attributes.threshold.min">
       </label>
     </form>
     <form id="temperature-form110" class="list" ng-show="data.attributes.mode==1">
@@ -38,11 +38,11 @@
       </div>
       <label class="item item-input" id="temperature-input106">
         <span class="input-label">Minimum Limit</span>
-        <input type="text" placeholder="" ng-model="data.attributes.threshold.min">
+        <input type="number" placeholder="" ng-model="data.attributes.threshold.min">
       </label>
       <label class="item item-input" id="temperature-input108">
         <span class="input-label">Maximum Limit</span>
-        <input type="text" placeholder="" ng-model="data.attributes.threshold.max">
+        <input type="number" placeholder="" ng-model="data.attributes.threshold.max">
       </label>
       <label class="item item-select" id="temperature-select29">
         <span class="input-label">Activate when</span>
@@ -59,7 +59,7 @@
       </label>
       <label class="item item-input" id="temperature-input123">
         <span class="input-label">Period (milliseconds)</span>
-        <input type="text" placeholder="" ng-model="data.attributes.alert.period">
+        <input type="number" placeholder="" ng-model="data.attributes.alert.period">
       </label>
     </form>
     <form id="temperature-form111" class="list" ng-show="data.attributes.mode==2">
