Updated adding and viewing of I2C DEVICES to include device type (INPUT or OUTPUT)

--- a/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
@@ -52,6 +52,12 @@
       <div id="addI2CDeviceDetails-markdown133" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.i2c.class }}</p>
       </div>
+      <div id="addI2CDeviceDetails-markdown143" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Device Type</p>
+      </div>
+      <div id="addI2CDeviceDetails-markdown144" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">{{ data.i2c.type }}</p>
+      </div>
     </form>
     <div id="addI2CDeviceDetails-markdown70" class="show-list-numbers-and-dots">
       <hr>
